--- a/src/AuthWidget/authWidget.html
+++ b/src/AuthWidget/authWidget.html
@@ -8,9 +8,15 @@
         </div>
     </div>
 {{else}}
+
     <div class="authWidget_unauthorized">
-        <div class="authWidget-loginButton">
-            {{i 'auth.login'}}
+        <div class="authWidget-userPanel">
+            <div class="authWidget-userPanel-iconCell">
+                <div class="authWidget-userPanel-userIcon"></div>
+            </div>
+            <div class="authWidget-loginButton">
+                {{i 'auth.login'}}
+            </div>
         </div>
     </div>
 {{/if}}
