--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ScanEx Web Geomixer - просмотр карты</title>
-<link rel="icon" href="img/favicon.ico"/> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ScanEx Web Geomixer - просмотр карты</title>
+    <link rel="icon" href="img/favicon.ico" />
 
-<script src="LAB.min.js"></script>
+    <script src="LAB.min.js"></script>
 
-<script>
-	$LAB.script( "config.js?" + Math.random() ).wait(function()
-	{
-		$LAB.script( (typeof gmxJSHost === 'undefined' ? "" : gmxJSHost) + "dist/geomixer.js" + "?" + Math.random() );
-	});
-</script>
+    <script>
+        $LAB.script("config.js?" + Math.random()).wait(function() {
+            $LAB.script((typeof gmxJSHost === 'undefined' ? "" : gmxJSHost) + "dist/geomixer.js" + "?" + Math.random());
+        });
+    </script>
 
 </head>
+
 <body>
     <div id="all">
         <div id="header" class="header"></div>
-        <div id="leftMenu" class="leftMenu">
-            <div id="leftPanelHeader" class="leftPanelHeader"></div>
-            <div id="leftContent" class="leftContent">
-                <div id="leftContentInner" class="leftContentInner"></div>
-            </div>
-            <div id="leftPanelFooter" class="leftPanelFooter"></div>
-        </div>
-        <div id="leftCollapser">
-            <div class="leftCollapser-icon leftCollapser-left"></div>
-        </div>
         <div id="flash" class="flashMap">
         </div>
         <div id="bottomContent" class="bottomContent"></div>
         <div id="tooltip" class="tooltip"></div>
     </div>
 </body>
+
 </html>
