--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ScanEx Web Geomixer - просмотр карты</title>
-<link rel="icon" href="img/favicon.ico"/> 
+<link rel="icon" href="img/favicon.ico"/>
 
 <script src="LAB.min.js"></script>
 
@@ -19,16 +19,18 @@
 <body>
     <div id="all">
         <div id="header" class="header"></div>
-        <div id="leftMenu" class="leftMenu">
+        <div id="leftMenu">
+        </div>
+        <!-- <div id="leftMenu" class="leftMenu">
             <div id="leftPanelHeader" class="leftPanelHeader"></div>
             <div id="leftContent" class="leftContent">
                 <div id="leftContentInner" class="leftContentInner"></div>
             </div>
             <div id="leftPanelFooter" class="leftPanelFooter"></div>
-        </div>
-        <div id="leftCollapser">
+        </div> -->
+        <!-- <div id="leftCollapser">
             <div class="leftCollapser-icon leftCollapser-left"></div>
-        </div>
+        </div> -->
         <div id="flash" class="flashMap">
         </div>
         <div id="bottomContent" class="bottomContent"></div>
