Fix new field creation bug

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ScanEx Web Geomixer - просмотр карты</title>
-<link rel="icon" href="img/favicon.ico"/>
-
-<script src="LAB.min.js"></script>
-
-<script>
-	$LAB.script( "config.js?" + Math.random() ).wait(function()
-	{
-		$LAB.script( (typeof gmxJSHost === 'undefined' ? "" : gmxJSHost) + "dist/ViewerLoader.js" + "?" + Math.random() );
-	});
-</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>ScanEx Web Geomixer - просмотр карты</title>
+	<link rel="icon" href="img/favicon.ico"/>
+	<script src="LAB.min.js"></script>
+	<script>
+		$LAB.script( "config.js?" + Math.random() ).wait(function()
+		{
+			$LAB.script( (typeof gmxJSHost === 'undefined' ? "" : gmxJSHost) + "dist/ViewerLoader.js" + "?" + Math.random() );
+		});
+	</script>
 
 </head>
 <body>
