--- a/help_rus.html
+++ b/help_rus.html
@@ -1,6 +1,6 @@
-﻿<p><a href = "http://geomixer.ru" target="_blank">GeoMixer {{gmxVersion}}</a> - веб-геоинформационная платформа для широкого круга задач, которая позволяет работать с геоданными как через интернет так и в локальной сети предприятия. Вы можете создавать собственные картографические проекты и публиковать данные из профессиональных ГИС-форматов и из обычных текстовых файлов, содержащих таблицы с адресами или координатами. <a href = "http://geomixer.ru" target="_blank">Прочитайте о возможностях GeoMixer</a> по визуализации, анализу и совместному редакторованию данных.
+﻿<p><a href = "https://geomixer.ru" target="_blank">GeoMixer {{gmxVersion}}</a> - веб-геоинформационная платформа для широкого круга задач, которая позволяет работать с геоданными как через интернет так и в локальной сети предприятия. Вы можете создавать собственные картографические проекты и публиковать данные из профессиональных ГИС-форматов и из обычных текстовых файлов, содержащих таблицы с адресами или координатами. <a href = "https://geomixer.ru" target="_blank">Прочитайте о возможностях GeoMixer</a> по визуализации, анализу и совместному редакторованию данных.
 
-<p>GeoMixer также включает <a href = "http://geomixer.ru/index.php/ru/docs/dev-manual/getting-started" target="_blank">компонент API</a>, который позволяет встраивать созданные проекты в сторонние веб-сайты и приложения и программно управлять фукционалом интерактивной карты.
+<p>GeoMixer также включает <a href = "https://geomixer.ru/docs/" target="_blank">компонент API</a>, который позволяет встраивать созданные проекты в сторонние веб-сайты и приложения и программно управлять фукционалом интерактивной карты.
 
 <p>GeoMixer разрабатывается компанией <a href = "http://www.scanex.ru" target="_blank">ИТЦ СКАНЭКС</a>.
 
